@@ -3,6 +3,8 @@ breezy-debian (2.8.27) UNRELEASED; urgency=medium
   * Support dotted revnos when referencing upstream revisions.
   * Support a Repository-Tag-Prefix field in debian/upstream/metadata.
   * builddeb: Drop unused -w option.
+  * Export upstream keyrings when downloading new upstream releases with
+    uscan.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 06 Mar 2019 21:35:13 +0000
 
